# affiliation_normalizer

./: .gitignore  AGENTS.md  README.md  alias_policy_review.tsv  build_test_set_from_combined.py  canonical_precedence.tsv  combined_affiliation_test_set_draft.csv  ipf_to_email.csv  niaid_org_seed.csv  niaid_org_seed_2021_2025.csv  niaid_org_seed_master.csv  niaid_org_seed_with_links.csv  niaid_org_seed_with_links_with_ids.csv  openalex_affiliations_from_pmids.py  pmid-sagept-set.txt  pyproject.toml  top200_niaid_orgs_working_2021_2025.csv  top_us_funded.py  tuning_report_from_labeled_test_set.md  tuning_rule_candidates.tsv  tuning_unresolved_examples.tsv
affiliation_normalizer/: README.md  build_rules.py  matcher.py  models.py
affiliation_normalizer/data/: rules.json
tests/: test_affiliation_normalizer.py
